--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1243,3 +1243,5 @@ a:hover {
     .footer-bottom { text-align: center; }
     .footer-bottom .text-md-right { text-align: center !important; margin-top: 0.5rem; }
 }
+
+/* end */
